tried to fix alignment of all the elements and the menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,7 @@ nav img{
 
 .text-box {
     width: 45%;
+    margin: auto;
     color: black;
     border-radius: 10px;
     position: absolute;
@@ -90,7 +91,7 @@ nav img{
     margin-top: 1%;
 }
 .text-box p {
-    margin: 10px 0 10px;
+    margin: 10px 0 10px 0;
     font-size: 17px;
     color: black;
     text-align: center;
@@ -131,13 +132,13 @@ nav .lni{
         margin-top: 10vh;
     }
     .masthead{
-        width: 40%;
+        width: 30%;
     }
     .text-box{
         width: 90%;
     }
     .text-box h1 {
-        font-size: 20px;
+        font-size: 30px;
     }
 
     .text-box p {
@@ -149,12 +150,15 @@ nav .lni{
     .nav-links{
         position: absolute;
         background: #f26554;
-        height: 100vh;
-        width: 200px;
+        height: 100%;
+        width: 100%;
         top: 0;
-        right: -200px;
+        right: 0px;
         text-align: left;
         z-index: 2;
+        opacity: 0;
+        pointer-events: none;
+        margin-top: 6vh;
         transition: 1s;
     }
     nav .lni{
